--- a/src/styles/MainLogic.css
+++ b/src/styles/MainLogic.css
@@ -1,3 +1,14 @@
 .MainLogic {
 	background-color: #777;
+	color: white;
+	text-align: center;
+	margin: 35px 65px 35px 65px;
+	padding: 10px;
+}
+input.form-control {
+	display: inline;
+    width: inherit;
+    padding: 0;
+    border-radius: 0;
+    margin-left: 10px;  
 }
