--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -10,7 +10,18 @@
 	text-align: center;
 	color: white;
 }
+.header > * {
+float: left;
+
+
+
+}
+
+
+
 .header > div {
 	flex-direction:row;
-	text-align: right;
+	align-items: flex-end;
+	margin-right: auto;
+	float: right;
 }
